--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     padding: 0;
     font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     color: #fff;
-    background: url("Chrome%20Wallpaper.png") no-repeat center center fixed;
+    background: url("Chat_Demo_Wallpaper.png") no-repeat center center fixed;
     background-size: cover;
     overflow: hidden;
   }
